--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,6 @@ dependencies:
 
   logging: ^1.3.0
   persistent_bottom_nav_bar: ^6.2.1
-  mapbox_maps_flutter: ^2.6.1
   geolocator: ^13.0.3
   image_picker: ^1.1.2
   intl: ^0.19.0
@@ -31,6 +30,8 @@ dependencies:
   permission_handler: ^11.4.0
   flutter_launcher_icons: ^0.14.3
   animated_background: ^2.0.0
+  latlong2: ^0.9.1
+  mapbox_maps_flutter: 2.7.0
 
 dev_dependencies:
   flutter_test:
