--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,10 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   animated_background: ^2.0.0
   latlong2: ^0.9.1
-  mapbox_maps_flutter: ^2.8.0-beta.1
+  mapbox_maps_flutter: ^2.7.0
   fluttertoast: ^8.2.12
   flutter_dotenv: ^5.2.1
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
