--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,6 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-
-  # Amplify dependencies
   amplify_flutter: ^2.6.1
   amplify_auth_cognito: ^2.6.1
   amplify_storage_s3: ^2.6.1
@@ -20,12 +18,11 @@ dependencies:
   amplify_datastore: ^2.6.1
   amplify_authenticator: ^2.3.3
   aws_lambda_api: ^2.0.0
-
   logging: ^1.3.0
   persistent_bottom_nav_bar: ^6.2.1
   geolocator: ^13.0.3
   image_picker: ^1.1.2
-  intl: ^0.19.0
+  # intl: ^0.19.0
   camera: ^0.11.1
   permission_handler: ^11.4.0
   flutter_launcher_icons: ^0.14.3
@@ -35,6 +32,9 @@ dependencies:
   fluttertoast: ^8.2.12
   flutter_dotenv: ^5.2.1
   geocoding: ^3.0.0
+
+dependency_overrides:
+  intl: ^0.20.2 # Temporary fix to dependency conflict (Might cause errors but idk)
 
 dev_dependencies:
   flutter_test:
