--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  core_ui:
+    path: ./core_ui
+
   cupertino_icons: ^1.0.8
   amplify_flutter: ^2.6.1
   amplify_auth_cognito: ^2.6.1
@@ -22,7 +25,7 @@ dependencies:
   persistent_bottom_nav_bar: ^6.2.1
   geolocator: ^13.0.3
   image_picker: ^1.1.2
-  # intl: ^0.19.0
+  intl: ^0.19.0
   camera: ^0.11.1
   permission_handler: ^11.4.0
   flutter_launcher_icons: ^0.14.3
