--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   fluttertoast: ^8.2.12
   flutter_dotenv: ^5.2.1
   geocoding: ^3.0.0
+  auto_size_text: ^3.0.0
+  provider: ^6.1.2
 
 dependency_overrides:
   intl: ^0.20.2 # Temporary fix to dependency conflict (Might cause errors but idk)
