--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   geocoding: ^3.0.0
   auto_size_text: ^3.0.0
   provider: ^6.1.2
+  http: ^1.4.0
 
 dependency_overrides:
   intl: ^0.20.2 # Temporary fix to dependency conflict (Might cause errors but idk)
