--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   auto_size_text: ^3.0.0
   provider: ^6.1.2
   http: ^1.4.0
+  package_info_plus: ^8.1.0
 
 dependency_overrides:
   intl: ^0.20.2 # Temporary fix to dependency conflict (Might cause errors but idk)
