--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>SightTrack</string>
+	<string>Sighttrack</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -15,7 +15,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>sighttrackv2</string>
+	<string>sighttrack</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -26,6 +26,21 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>We need access to your camera to take pictures for sightings - one of the core features</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We need access to your location while in use to update the map in real-time. We also need it to create sightings, as each sighting requires location coordinates. For privacy, one may turn on location offset. Additionally, we don't track your location when you are not using the app. Location is only recorded when you create a sighting yourself</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need access to your location while in use to update the map in real-time. We also need it to create sightings, as each sighting requires location coordinates. For privacy, one may turn on location offset</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We need access to your audio, since taking a capture requires this. Audio isn't used in the app, but is just a requirement for taking photos</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need access to your photo album to enable choosing a profile picture</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
@@ -45,22 +60,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>We need access to your photo album to enable choosing a profile picture</string>
-	<key>NSCameraUsageDescription</key>
-	<string>We need access to your camera to take pictures for sightings - one of the core features</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>We need access to your location while in use to update the map in real-time. We also need it to create sightings, as each sighting requires location coordinates. For privacy, one may turn on location offset</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>We need access to your location while in use to update the map in real-time. We also need it to create sightings, as each sighting requires location coordinates. For privacy, one may turn on location offset. Additionally, we don't track your location when you are not using the app. Location is only recorded when you create a sighting yourself</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>We need access to your audio, since taking a capture requires this. Audio isn't used in the app, but is just a requirement for taking photos</string>
-
-	<key>NSAppTransportSecurity</key>
-	<dict>
-    	<key>NSAllowsArbitraryLoads</key>
-    	<true/>
-	</dict>
 </dict>
 </plist>
