--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: sighttrack
 description: "An environment and biodiversity monitoring app"
 publish_to: 'none'
 
-version: 3.0.4+1
+version: 3.0.4+2
 
 environment:
   sdk: ^3.7.0
@@ -25,6 +25,7 @@ dependencies:
   persistent_bottom_nav_bar: ^6.2.1
   geolocator: ^13.0.3
   image_picker: ^1.1.2
+  image_cropper: ^8.0.2
   intl: ^0.19.0
   camera: ^0.11.1
   permission_handler: ^11.4.0
@@ -39,6 +40,7 @@ dependencies:
   provider: ^6.1.2
   http: ^1.4.0
   package_info_plus: ^8.1.0
+  path_provider: ^2.1.5
 
 dependency_overrides:
   intl: ^0.20.2 # Temporary fix to dependency conflict (Might cause errors but idk)
@@ -54,3 +56,4 @@ flutter:
     - "assets/logo.jpg"
     - "assets/logo_transparent.png"
     - ".env"
+    - "assets/test/canada_goose.jpg"
