update local data page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,3 +57,4 @@ flutter:
     - "assets/logo_transparent.png"
     - ".env"
     - "assets/test/canada_goose.jpg"
+    - assets/city_border.geojson
