--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: sighttrack
 description: "An environment and biodiversity monitoring app"
-publish_to: 'none'
+publish_to: "none"
 
-version: 3.0.4+3
+version: 3.0.5+1
 
 environment:
   sdk: ^3.7.0
